Add System.Diagnostics.PerformanceData namespace (#31474)
* move System.Diagnostics.PerformanceData from netfx

* updates

* use type aliases, fix style, cleanup

* remove CAS attributes

* nit: extralines

* Add tests

* update tests

* update tests

* update tests,use type aliases, cleanup

* address PR feedback

* address some of PR feedback

* address some  of PR feedback

* address some of PR feedback

* address PR feedback

* added retry/dispose

* update tests

* try to run new test in isolated process

* revert changes to other tests, add retry on new test

* fix netfx test fail, add comments

--- a/src/System.Diagnostics.PerformanceCounter/src/System.Diagnostics.PerformanceCounter.csproj
+++ b/src/System.Diagnostics.PerformanceCounter/src/System.Diagnostics.PerformanceCounter.csproj
@@ -35,6 +35,12 @@
     <Compile Include="System\Diagnostics\SystemDiagnosticsSection.cs" />
     <Compile Include="System\Diagnostics\TraceInternal.cs" />
     <Compile Include="misc\EnvironmentHelpers.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\CounterSet.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\CounterSetInstance.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\CounterSetInstanceCounterDataSet.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\CounterSetInstanceType.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\CounterType.cs" />
+    <Compile Include="System\Diagnostics\PerformanceData\PerfProviderCollection.cs" />
     <Compile Include="$(CommonPath)\CoreLib\Interop\Windows\Interop.BOOL.cs">
       <Link>Common\CoreLib\Interop\Windows\Interop.BOOL.cs</Link>
     </Compile>
@@ -131,16 +137,23 @@
     <Compile Include="$(CommonPath)\Interop\Windows\perfcounter\Interop.FormatFromRawValue.cs">
       <Link>Common\Interop\Windows\perfcounter\Interop.FormatFromRawValue.cs</Link>
     </Compile>
+    <Compile Include="$(CommonPath)\Interop\Windows\perfcounter\Interop.PerformanceData.cs">
+      <Link>Common\Interop\Windows\perfcounter\Interop.PerformanceData.cs</Link>
+    </Compile>
     <Compile Include="$(CommonPath)\Microsoft\Win32\SafeHandles\SafeLocalAllocHandle.cs">
       <Link>Common\Microsoft\Win32\SafeHandles\SafeLocalAllocHandle.cs</Link>
     </Compile>
     <Compile Include="$(CommonPath)\Microsoft\Win32\SafeHandles\SafeLocalMemHandle.cs">
       <Link>Common\Microsoft\Win32\SafeHandles\SafeLocalMemHandle.cs</Link>
     </Compile>
+  <Compile Include="$(CommonPath)\Microsoft\Win32\SafeHandles\SafePerfProviderHandle.cs">
+      <Link>Common\Microsoft\Win32\SafeHandles\SafePerfProviderHandle.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup Condition="'$(TargetsNetFx)' == 'true'">
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetsNetFx)' != 'true'">
     <Reference Include="Microsoft.Win32.Registry" />
