--- a/src/System.Net.Http/tests/FunctionalTests/System.Net.Http.Functional.Tests.csproj
+++ b/src/System.Net.Http/tests/FunctionalTests/System.Net.Http.Functional.Tests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="HttpMethodTest.cs" />
     <Compile Include="HttpCookieProtocolTests.cs" />
     <Compile Include="HttpRetryProtocolTests.cs" />
+    <Compile Include="HuffmanDecodingTests.cs" />
     <Compile Include="IdnaProtocolTests.cs" />
     <Compile Include="HttpProtocolTests.cs" />
     <Compile Include="HttpRequestMessageTest.cs" />
